# mrdu-proxy

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/controller/: auth.py  student.py
app/core/: jwt_auth.py  logging.py
